--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,13 @@
 
 /apps/detector/model.pt
 
-/venv/
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+.venv
+pip-selfcheck.json
