--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,5 @@
 
 /apps/detector/model.pt
 
-.Python
-[Bb]in
-[Ii]nclude
-[Ll]ib
-[Ll]ib64
-[Ll]ocal
-[Ss]cripts
-pyvenv.cfg
-.venv
-pip-selfcheck.json
+.venv-release
+venv/
